k8s/base/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: postgres
spec:
  podSelector: {}
  policyTypes: 
    - Ingress
    - Egress
